--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Dylan Schmidt</title>
+</head>
+<body>
+    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+</body>
+</html>
